chore: use npm instead of yarn

--- a/package.json
+++ b/package.json
@@ -72,35 +72,35 @@
     }
   },
   "scripts": {
-    "start": "yarn run start:renderer && yarn run start:main",
+    "start": "npm run start:renderer && npm run start:main",
     "start:main": "electron-webpack dev",
     "start:main:dev_tools": "cross-env DEV_TOOLS=1 electron-webpack dev",
     "start:renderer": "cross-env APP_ROOT=src/renderer PORT=6008 BROWSER=none umi dev",
     "build:main:prod": "cross-env NODE_ENV=production webpack --config ./build/webpack.main.prod.config.js",
     "build:main:dev": "cross-env NODE_ENV=development webpack --config ./build/webpack.main.config.js",
     "build:renderer": "cross-env APP_ROOT=src/renderer umi build",
-    "build": "rm -rf dist && yarn run build:renderer && yarn run build:main:prod",
+    "build": "rm -rf dist && npm run build:renderer && npm run build:main:prod",
     "test:renderer": "cross-env APP_ROOT=src/renderer PORT=6008 BROWSER=none umi test",
-    "test:watch": "yarn run test:renderer -w",
-    "test": "yarn run test:renderer",
+    "test:watch": "npm run test:renderer -w",
+    "test": "npm run test:renderer",
     "watch": "tsc -w",
     "lint": "tslint -c tslint.json -p tsconfig.json",
     "debug:main": "electron --inspect=5858 -w ./dist/main/main.js",
-    "pack": "yarn run build && electron-builder --dir",
+    "pack": "npm run build && electron-builder --dir",
     "dist": "electron-builder",
-    "package:win": "yarn build && rm -rf release && electron-builder build --win --x64",
-    "package:linux": "yarn build && rm -rf release && electron-builder build --linux",
-    "package:mac": "yarn build && rm -rf release && electron-builder build --mac",
+    "package:win": "npm build && rm -rf release && electron-builder build --win --x64",
+    "package:linux": "npm build && rm -rf release && electron-builder build --linux",
+    "package:mac": "npm build && rm -rf release && electron-builder build --mac",
     "prettier": "prettier --list-different \"./**/*.{ts,tsx,js,jsx,less}\"",
-    "release:win": "yarn build && electron-builder build --win -p always",
-    "release:mac": "yarn build && electron-builder build --mac -p always",
-    "release:linux": "yarn build && electron-builder build --linux -p always",
-    "release:linux:arm": "yarn build electron-builder build --linux --armv7l -p always",
-    "release:all": "yarn build && electron-builder -p always",
-    "release": "yarn run build && electron-builder build",
-    "patch": "yarn version --patch && git push origin master && git push origin --tags",
-    "minor": "yarn version --minor && git push origin master && git push origin --tags",
-    "major": "yarn version --major && git push origin master && git push origin --tags"
+    "release:win": "npm build && electron-builder build --win -p always",
+    "release:mac": "npm build && electron-builder build --mac -p always",
+    "release:linux": "npm build && electron-builder build --linux -p always",
+    "release:linux:arm": "npm build electron-builder build --linux --armv7l -p always",
+    "release:all": "npm build && electron-builder -p always",
+    "release": "npm run build && electron-builder build",
+    "patch": "npm version --patch && git push origin master && git push origin --tags",
+    "minor": "npm version --minor && git push origin master && git push origin --tags",
+    "major": "npm version --major && git push origin master && git push origin --tags"
   },
   "repository": "https://github.com/zenghongtu/Mob",
   "keywords": [
